feat(User Type): Created  Authentication and refreshToken
