# src/shared/infra/http/routes/entityTypes.routes.ts
@@ -1,4 +1,5 @@
 import { Router } from 'express';
+import { ensureAuthentication } from '../middlewares/ensureAuthentication';
 
 import { CreateEntityTypeController } from '@modules/entities/useCases/CreateEntityType/CreateEntityTypeController';
 
@@ -6,7 +7,7 @@ const entityTypesRoutes = Router();
 
 const createEntityTypeController = new CreateEntityTypeController();
 
-entityTypesRoutes.post('/', createEntityTypeController.handle );
+entityTypesRoutes.post('/', ensureAuthentication, createEntityTypeController.handle );
 
 
 export { entityTypesRoutes };
